data/derived/fa15/progs/unify/prog1141.ml.out
Characters 241-281:
  |4 -> buildAverage build(rand,d),build(rand,d)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
